# index-creator-rs

./: Cargo.toml  README.md
src/main/rust/: helper.rs  ind.rs  main.rs
src/main/rust/file/: fasta.rs
